- changed api record Postfix to resource - changed refs to api classes - created to MapperUtil Classes
